# webserver_rust

./: Cargo.toml  index.html
css/: ._tooplate-infinite-loop.css  bootstrap.min.css  tooplate-infinite-loop.css
fontawesome-5.5/: ._LICENSE.txt
fontawesome-5.5/css/: ._all.min.css  all.min.css
js/: bootstrap.min.js  jquery-1.9.1.min.js  jquery.singlePageNav.min.js
src/: ._.env  ._lettre  ._main.c  ._main.js  ._main.rs  .env  main.rs
src/TOKEN/: main.js
src/lettre/: ._.clog.toml  ._.editorconfig  ._.git  ._.github  ._.gitignore  ._CHANGELOG.md  ._CODE_OF_CONDUCT.md  ._CONTRIBUTING.md  ._Cargo.toml  ._LICENSE  ._README.md  ._SECURITY.md  ._benches  ._docs  ._examples  ._rustfmt.toml  ._src  ._target  ._testdata  ._tests
src/lettre/.github/: ._FUNDING.yml  ._ISSUE_TEMPLATE  ._workflows
src/lettre/.github/ISSUE_TEMPLATE/: ._Bug_report.md  ._Feature_request.md  Bug_report.md
src/lettre/.github/workflows/: ._audit.yml  ._test.yml
src/lettre/benches/: ._mailbox_parsing.rs  ._transport_smtp.rs
src/lettre/examples/: ._README.md  ._asyncstd1_smtp_starttls.rs  ._asyncstd1_smtp_tls.rs  ._autoconfigure.rs  ._basic_html.rs  ._maud_html.rs  ._smtp.rs  ._smtp_selfsigned.rs  ._smtp_starttls.rs  ._smtp_tls.rs  ._tokio1_smtp_starttls.rs  ._tokio1_smtp_tls.rs
src/lettre/src/: ._address  ._base64.rs  ._error.rs  ._executor.rs  ._lib.rs  ._message  ._transport
src/lettre/testdata/: ._coredns.conf  ._db.example.org  ._email_with_png.eml
src/lettre/tests/: ._transport_file.rs  ._transport_sendmail.rs  ._transport_smtp.rs  ._transport_smtp_pool.rs  ._transport_stub.rs
(+58 files in other folders)
