[package]
name = "web_server2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
http = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
lettre = "0.10.0-rc.3"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
base64 = "0.13"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"